// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse must match the diff snapshot between Expand vs TileWithCollapse Props 1`] = `
Snapshot Diff:
- First value
+ Second value

  <TileWithCollapseWrapperStyle>
    <CollapseTriggerStyle
-     aria-expanded={false}
-     aria-label="common.shrink_collapse"
+     aria-expanded={true}
+     aria-label="common.expand_collapse"
      disabled={false}
      onClick={[Function toggleCollapse]}
    >
      foo
      <CollapseIconStyle
        aria-hidden={true}
-       iscollapsed={false}
+       iscollapsed={true}
      >
        <SvgAngleArrowRight />
      </CollapseIconStyle>
    </CollapseTriggerStyle>
    <CollapseContentStyle
-     aria-hidden={false}
+     aria-hidden={true}
      forcedexpand={false}
-     iscollapsed={false}
+     iscollapsed={true}
    >
      <TileWithCollapseSeparatorStyle />
      bar
    </CollapseContentStyle>
  </TileWithCollapseWrapperStyle>
`;

exports[`Collapse must match the diff snapshot between forceExpandOnDesktop vs default Props 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Collapse must match the snapshot with default Props 1`] = `
<TileWithCollapseWrapperStyle>
  <CollapseTriggerStyle
    aria-expanded={true}
    aria-label="common.expand_collapse"
    disabled={false}
    onClick={[Function]}
  >
    foo
    <CollapseIconStyle
      aria-hidden={true}
      iscollapsed={true}
    >
      <SvgAngleArrowRight />
    </CollapseIconStyle>
  </CollapseTriggerStyle>
  <CollapseContentStyle
    aria-hidden={true}
    forcedexpand={false}
    iscollapsed={true}
  >
    <TileWithCollapseSeparatorStyle />
    bar
  </CollapseContentStyle>
</TileWithCollapseWrapperStyle>
`;
